--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                          <img src="assets/images/logo-color.png" alt="EduWell Template"
+                          style="max-height: 60px"
+                            >
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -51,12 +53,12 @@ https://templatemo.com/tm-573-eduwell
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
-                                  <li><a href="about-us.html">About Us</a></li>
-                                  <li><a href="our-services.html">Our Services</a></li>
-                                  <li><a href="contact-us.html">Contact Us</a></li>
+                                  <li><a href="components/about-us.html">About Us</a></li>
+                                  <li><a href="components/our-services.html">Our Services</a></li>
+                                  <li><a href="components/contact-us.html">Contact Us</a></li>
                               </ul>
                           </li>
-                          <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li> 
+                         <!--- <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li> -->
                           <li class="scroll-to-section"><a href="#contact-section">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
@@ -76,8 +78,8 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
-            <h6>Welcome to our school</h6>
-            <h2>Best Place To Learn Graphic <em>Design!</em></h2>
+            <h6>Welcome to our company</h6>
+            <h2>Best Place for <em>Fullstack development!</em></h2>
             <div class="main-button-gradient">
               <div class="scroll-to-section"><a href="#contact-section">Join Us Now!</a></div>
             </div>
@@ -109,8 +111,11 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Useful Tricks</h4>
-                <p>EduWell is the professional HTML5 template for your school or university websites.</p>
+                <h4>Full-Stack Development</h4>
+                <p>Connecting the front-end and back-end components of web applications.
+                  Creating RESTful to facilitate communication between the client and server.
+                  Tools: PHP(Laravel), HTML/CSS, JavaScript, Vue.js, React Native.
+             </p>
               </div>
             </div>
             <div class="item">
@@ -118,8 +123,10 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-02.png" alt="">
                 </div>
-                <h4>Creative Ideas</h4>
-                <p>You can download and use this EduWell Template for your teaching and learning stuffs.</p>
+                <h4>Testing and Quality Assurance</h4>
+                <p>Writing and conducting unit tests for code quality and reliability.
+                   Identifying and fixing bugs and issues in applications.
+                   Ensuring applications meet quality and performance standards.</p>
               </div>
             </div>
             <div class="item">
@@ -127,8 +134,10 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-03.png" alt="">
                 </div>
-                <h4>Ready Target</h4>
-                <p>Please tell your friends about the best CSS template website that is TemplateMo.</p>
+                <h4>Soft Skills</h4>
+                <p>Effectively identifying and solving technical challenges.
+                  Clear communication with team members and stakeholders.
+                  Managing time and tasks efficiently.</p>
               </div>
             </div>
             <div class="item">
@@ -136,11 +145,12 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-04.png" alt="">
                 </div>
-                <h4>Technology</h4>
-                <p>Aenean bibendum consectetur ex eu porttitor. Pellentesque id ultrices metus.</p>
+                <h4>Continuous Learning and Adaptability</h4>
+                <p>Staying updated with the latest web development trends and technologies.
+                  Quickly adapting to new tools and frameworks.</p>
               </div>
             </div>
-            <div class="item">
+          <!--  <div class="item">
               <div class="service-item">
                 <div class="icon">
                   <img src="assets/images/service-icon-01.png" alt="">
@@ -211,7 +221,7 @@ https://templatemo.com/tm-573-eduwell
                 <h4>Technology</h4>
                 <p>Praesent accumsan condimentum arcu, id porttitor est semper nec. Nunc diam lorem.</p>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -345,7 +355,7 @@ https://templatemo.com/tm-573-eduwell
     </div>
   </section>
 
-  <section class="testimonials" id="testimonials">
+  <!--<section class="testimonials" id="testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -408,7 +418,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="contact-us" id="contact-section">
     <div class="container">
@@ -417,15 +427,16 @@ https://templatemo.com/tm-573-eduwell
           <div id="map">
           
             <!-- You just need to go to Google Maps for your own map point, and copy the embed code from Share -> Embed a map section -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7151.84524236698!2d-122.19494600413192!3d47.56605883252286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490695e625f8965%3A0xf99b055e76477def!2sNewcastle%20Beach%20Park%20Playground%2C%20Bellevue%2C%20WA%2098006%2C%20USA!5e0!3m2!1sen!2sth!4v1644335269264!5m2!1sen!2sth" width="100%" height="420px" frameborder="0" style="border:0; border-radius: 15px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90627.52008598708!2d17.123766063668835!3d44.77856267432052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e03062ccd6b05%3A0x73fe3280dfee195d!2sBanja%20Luka%2078000!5e0!3m2!1sen!2sba!4v1698138307569!5m2!1sen!2sba" width="100%" height="420px" frameborder="0" style="border:0; border-radius: 15px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+           <!--- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90627.52008598708!2d17.123766063668835!3d44.77856267432052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e03062ccd6b05%3A0x73fe3280dfee195d!2sBanja%20Luka%2078000!5e0!3m2!1sen!2sba!4v1698138307569!5m2!1sen!2sba" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
             <div class="row">
               <div class="col-lg-4 offset-lg-1">
                 <div class="contact-info">
                   <div class="icon">
-                    <i class="fa fa-phone"></i>
+                    <i class="fa fa-envelope"></i>
                   </div>
-                  <h4>Phone</h4>
-                  <span>010-020-0340</span>
+                  <h4>Email</h4>
+                  <span style="font-size: 12px;">milicagalicdev@gmail.com</span>
                 </div>
               </div>
               <div class="col-lg-4">
@@ -434,7 +445,7 @@ https://templatemo.com/tm-573-eduwell
                     <i class="fa fa-phone"></i>
                   </div>
                   <h4>Mobile</h4>
-                  <span>090-080-0760</span>
+                  <span  style="font-size: 12px;">+387 66 488 722</span>
                 </div>
               </div>
             </div>
@@ -475,17 +486,20 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-12">
           <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="https://www.facebook.com/people/GALASOFT/100089973796959/"><i class="fa fa-facebook"></i></a></li>
+           <!--- <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+            <li><a href="https://www.linkedin.com/company/milica-galasoft"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com/_galasoft_/"><i class="fa fa-instagram"></i></a></li>
+
+           <!-- <li><a href="#"><i class="fa fa-rss"></i></a></li>
+            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
           </ul>
         </div>
         <div class="col-lg-12">
-          <p class="copyright">Copyright © 2022 EduWell Co., Ltd. All Rights Reserved. 
+          <p class="copyright">Copyright © 2023 Galasoft s.p. Milica Galić. All Rights Reserved. 
           
-          <br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <!--<br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>-->
+        </p>
         </div>
       </div>
     </div>
