--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/logo-color.png" alt="EduWell Template"
+                          <img src="assets/images/logo-color-1.png" alt="EduWell Template"
                           style="max-height: 60px"
                             >
                       </a>
@@ -49,7 +49,7 @@ https://templatemo.com/tm-573-eduwell
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">Services</a></li>
-                          <li class="scroll-to-section"><a href="#courses">Courses</a></li>
+                         <!-- <li class="scroll-to-section"><a href="#courses">Courses</a></li>-->
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
@@ -87,7 +87,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6">
           <div class="right-image">
-            <img src="assets/images/banner-right-image.png" alt="">
+            <img src="assets/images/new-banner-right-image.png" alt="">
           </div>
         </div>
       </div>
@@ -228,7 +228,7 @@ https://templatemo.com/tm-573-eduwell
     </div>
   </section>
 
-  <section class="our-courses" id="courses">
+ <!---<section class="our-courses" id="courses">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -333,7 +333,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="simple-cta">
     <div class="container">
@@ -345,10 +345,10 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-5 align-self-center">
           <h6>Get the sale right now!</h6>
-          <h4>Up to 50% OFF For 1+ courses</h4>
+          <!--<h4>Up to 50% OFF For 1+ courses</h4>-->
           <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
           <div class="white-button">
-            <a href="contact-us.html">View Courses</a>
+            <a href="contact-us.html">View offers</a>
           </div>
         </div>
       </div>
@@ -452,7 +452,7 @@ https://templatemo.com/tm-573-eduwell
           </div>
         </div>
         <div class="col-lg-4">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="send_email.php" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
