--- a/index.html
+++ b/index.html
@@ -452,15 +452,7 @@ https://templatemo.com/tm-573-eduwell
           </div>
         </div>
         <div class="col-lg-4">
-          <form action="send_email.php" method="post">
-            First Name: <input type="text" name="first_name"><br>
-            Last Name: <input type="text" name="last_name"><br>
-            Email: <input type="text" name="email"><br>
-            Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
-            <input type="submit" name="submit" value="Submit">
-            </form>
-            
-          <!--<form id="contact" action="" method="post">
+          <form id="contact" action="index.php" method="POST">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
@@ -490,7 +482,7 @@ https://templatemo.com/tm-573-eduwell
                 </fieldset>
               </div>
             </div>
-          </form>-->
+          </form>
         </div>
         <div class="col-lg-12">
           <ul class="social-icons">
